package org.example;

public enum Status {
    SUCCESS,
    SENT_TO_PROCESSING,
    NO_KADASTRS,
    ERROR
}